# rpod-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rpod/: __init__.py  auth.py  cli.py  config.py  create.py  deploy.py  fetch.py  github.py  gpu.py  hf.py  pod.py  runpod_api.py  ssh.py  sync.py  utils.py
tests/: test_config.py  test_create.py  test_fetch.py  test_github.py  test_gpu.py  test_pod.py  test_pod_actions.py
