[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpod-cli"
version = "0.1.0"
description = "A lightweight CLI for preparing and managing SSH-accessible RunPod experiment workspaces."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "gradnorm" }
]
dependencies = [
  "huggingface-hub>=0.23",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
rpod = "rpod.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rpod"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
